OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Change__c/Onboarding_Status_Change__c.object-meta.xml
<CustomObject>
    <label>Onboarding Status Change</label>
    <nameField>
        <displayFormat>ONBC-{000000}</displayFormat>
        <label>Onboarding Status Change Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Status Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>