OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Change__c/fields/Changed_by_User__c.field-meta.xml
<CustomField>
    <fullName>Changed_by_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Changed by User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Onboarding_Status_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>