OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Change__c/fields/Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Onboarding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding</label>
    <referenceTo>Onboarding__c</referenceTo>
    <relationshipLabel>Onboarding Status Changes</relationshipLabel>
    <relationshipName>Onboarding_Status_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>